Content additions & fix small gap between last content item and footer

--- a/src/app/components/about/about.component.sass
+++ b/src/app/components/about/about.component.sass
@@ -10,18 +10,18 @@ img
 	display: inline-block
 	cursor: pointer
 	@media only screen and (max-width: $medWidthMax) and (min-width: $medWidthMin)
-		width: 220px
-		height: 220px
-		padding: 10px
-		margin-right: 50px
-	@media only screen and (max-width: $largeWidthMax) and (min-width: $largeWidthMin)
 		width: 300px
 		height: 300px
 		padding: 10px
 		margin-right: 50px
+	@media only screen and (max-width: $largeWidthMax) and (min-width: $largeWidthMin)
+		width: 350px
+		height: 350px
+		padding: 10px
+		margin-right: 50px
 	@media only screen and (min-width: $xlargeWidthMin)
-		width: 400px
-		height: 400px
+		width: 450px
+		height: 450px
 		padding: 15px
 		margin-right: 50px
 	@include hideSmall()
@@ -42,7 +42,9 @@ img
 	box-sizing: border-box
 
 .section-header-text
-	@include headerTextSize()
+	font-family: 'Montserrat', sans-serif
+	font-weight: 700
+	@include sectionHeaderTextSize()
 
 .btn
 	background: $grey
