--- a/src/app/components/footer/footer.component.sass
+++ b/src/app/components/footer/footer.component.sass
@@ -1,3 +1,6 @@
+section
+	padding: 0
+
 .footer-container 
 	padding: 10px
 	background-color: #5d49cc
