--- a/src/app/content-list/components/content-item/content-item.component.sass
+++ b/src/app/content-list/components/content-item/content-item.component.sass
@@ -58,8 +58,8 @@
 	@include headerTextSize()
 
 .content-item-container
-	margin: 20px
 	border-radius: 10px
+	margin: 20px
 	background-size: cover
 	
 
@@ -81,3 +81,5 @@
 	margin: 10px 0
 	border: 1px solid $grey
 
+.bullet-point
+	list-style-position: inside
