--- a/src/mixins.sass
+++ b/src/mixins.sass
@@ -27,6 +27,16 @@
 	@media only screen and (min-width: $largeWidthMin)
 		font-size: 14pt
 
+@mixin sectionHeaderTextSize()
+	@media only screen and (max-width: $xsmallWidthMax)
+		font-size: 16pt
+	@media only screen and (max-width: $smallWidthMax) and (min-width: $smallWidthMin)
+		font-size: 20pt
+	@media only screen and (max-width: $medWidthMax) and (min-width: $medWidthMin)
+		font-size: 30pt
+	@media only screen and (min-width: $largeWidthMin)
+		font-size: 40pt
+
 @mixin headerTextSize()
 	@media only screen and (max-width: $xsmallWidthMax)
 		font-size: 14pt
